# meme_or_not

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  README.md  hparams.yaml  predict.py  pyproject.toml  requirements.txt  train.py
mem_or_not/: data_prep.py  dataloader.py  metrics.py  network.py
scripts/: prepare_images.py
src/: data_prep.py  dataloader.py  network.py  utils.py
tests/: test_data_prep.py  test_dataloader.py  test_image_preparation.py  test_network.py
