[tool.poetry]
name = "mem_or_not"
version = "0.1.0"
description = "A tool for detecting memes in image sets."
authors = ["Rafał Madaj"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchmetrics = "^1.3"
matplotlib = "^3.8"
seaborn = "^0.13"
scipy = "^1.15"
statsmodels = "^0.14"
pillow-heif = "^0.22.0"
pytorch_lightning = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^25.0"
pre-commit = "^4.2"
virtualenv = "^20.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
